# VideoClip

./: .gitignore  README.md  config.py  crop_controller.py  main.py  pyproject.toml  ruff.toml  ui_components.py  utils.py  video_processor.py
.github/: README.md  SKIP_CI_REFERENCE.md  TEMPLATE_USAGE.md  WORKFLOWS.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  code-quality.yml  dependencies.yml  lint.yml  release.yml  run-tests.yml
.history/: main_20250605094653.py  main_20250605094703.py  main_20250605100439.py
scripts/: check_docstrings.py  test_build.sh
tests/: README.md  conftest.py  test_basic.py  test_utils.py
